extends Control


func _on_newgame_pressed() -> void:
	print("New Game Created") # Replace with function body.


func _on_loadgame_pressed() -> void:
	print("Loaded Previous Game") # Replace with function body.


func _on_options_pressed() -> void:
	print("Options Loaded") # Replace with function body.


func _on_exit_pressed():
	get_tree().quit() # Replace with function body.
